# march

./: .gitignore  CMakeLists.txt  TODO  meson.build  meson_options.txt
assets/: main_hud.h  names.txt  scout_menu.h  title_menu.h  trade_menu.h  widget_sets.h
assets/widget_sets/: main_hud.h  scout_menu.h  settings.h  title_menu.h  trade_menu.h
src/: CMakeLists.txt  area.h  army.cc  army.h  config.h  day.h  event.h  gui.cc  gui.h  main.cc  march.cc  march.h  meson.build  scout.cc  scout.h  screen.cc  screen.h  sprite.cc  sprite.h  status.h  supply_items.h  trade.cc  trade.h  trade_element.h  ui.cc  ui.h  ui_text.cc  ui_text.h  widget.cc  widget.h  widget_return.h  widget_set.cc  widget_set.h  widget_text.h  world.h
subprojects/: protobuf-2.wrap  protobuf.wrap
subprojects/SDL2-2.26.5/: .meson-subproject-wrap-hash.txt
