add_executable(${PROJECT_NAME} 
  army.cc
  army.h
  area.h
  config.h
  day.h
  event.h
  gui.cc
  gui.h
  main.cc
  march.cc
  march.h
  scout.cc
  scout.h
  screen.cc
  screen.h
  sprite.h
  sprite.cc
  status.h
  supply_items.h
  trade.cc
  trade.h
  ui_text.cc
  ui_text.h
  widget.cc
  widget.h
  widget_set.cc
  widget_set.h
  widget_text.h
  world.h
  )
