
march = executable('march', sources : [ 'main.cc', 'army.cc', 'army.h', 'gui.cc', 'gui.h', 'march.cc', 'march.h', 'status.h', 'ui_text.cc', 'ui_text.h', 'scout.cc', 'scout.h', 'sprite.cc', 'sprite.h', 'supply_items.h', 'trade.cc', 'trade.h', 'day.h', 'area.h' ], dependencies : [sdl2_dep, sdl2_image_dep]
) 
