
march = executable('march', sources : [ 'main.cc', 'army.cc', 'army.h', 'gui.cc', 'gui.h', 'march.cc', 'march.h', 'status.h', 'ui_text.cc', 'ui_text.h', 'scout.cc', 'scout.h', 'screen.cc', 'screen.h', 'sprite.cc', 'sprite.h', 'supply_items.h', 'trade.cc', 'trade.h', 'widget.cc', 'widget.h', 'widget_set.cc', 'widget_set.h', 'widget_text.h', 'day.h', 'area.h', '../assets/widget_sets.h'], dependencies : [sdl2_dep, sdl2_image_dep, sdl2_ttf_dep]
) 
